--- a/.babelrc
+++ b/.babelrc
@@ -6,7 +6,15 @@
           "env", 
           {
             "targets": {
-              "uglify": true
+              "uglify": true,
+              "browsers": [
+                "last 2 versions",
+                "Firefox ESR",
+                "> 1%",
+                "ie >= 8",
+                "iOS >= 8",
+                "Android >= 4"
+              ]
             },
             "modules": false,
             "loose": true,
