--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,9 @@
 .DS_Store
-node_modules
-dist
-zip
+node_modules/
 npm-debug.log
-output
 test.js
 Thumbs.db
-.idea
-/next.js
 .vscode
 Makefile
 yarn.lock
-/spinacia-react-app
+/spinacia-react-redux
