--- a/package.json
+++ b/package.json
@@ -1,14 +1,18 @@
 {
   "name": "spinacia-cli",
-  "version": "1.0.7",
+  "version": "1.0.14",
   "description": "a react cli",
   "bin": {
     "spinacia-cli": "./bin/spinacia-cli.js"
   },
-  "dependencies": {},
+  "dependencies": {
+    "chalk": "^2.4.1",
+    "fs-extra": "^7.0.0",
+    "ora": "^3.0.0"
+  },
   "devDependencies": {},
   "scripts": {
-    "start": "rm -rf ./spinacia-react-app && spinacia-cli",
+    "start": "rm -rf ./spinacia-react-redux && spinacia-cli",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
@@ -22,6 +26,6 @@
     "type": "git",
     "url": "https://github.com/guibwl/spinacia-cli"
   },
-  "author": "jamesLiu",
+  "author": "guibwl",
   "license": "ISC"
 }
