--- a/packages/template/spinacia-react-redux/package.json
+++ b/packages/template/spinacia-react-redux/package.json
@@ -15,7 +15,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/guibwl/spinacia-react-redux"
+    "url": "https://github.com/guibwl/spinacia-cli"
   },
   "author": "guibwl",
   "license": "ISC",
