--- a/packages/template/spinacia-react-pure/.gitignore
+++ b/packages/template/spinacia-react-pure/.gitignore
@@ -1,13 +1,26 @@
-.DS_Store
-node_modules
-dist
-zip
-npm-debug.log
-output
-test.js
-Thumbs.db
-.idea
-/next.js
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+
+# dependencies
+/node_modules
+
+# testing
+/coverage
+
+# production
+/dist
+
+# vscode
 .vscode
-Makefile
-yarn.lock
+
+# misc
+Thumbs.db
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
