--- a/packages/template/spinacia-react-redux/package.json
+++ b/packages/template/spinacia-react-redux/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "cd build && node server.js",
     "test": "cross-env BABEL_ENV=test eslint app --fix",
-    "build": "rm -rf dist/ && cd build && cross-env BABEL_ENV=production webpack --progress --mode production"
+    "build": "cd build && cross-env BABEL_ENV=production webpack --progress --mode production"
   },
   "keywords": [
     "webpack",
@@ -32,6 +32,7 @@
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-1": "^6.24.1",
     "babel-runtime": "^6.26.0",
+    "clean-webpack-plugin": "^2.0.1",
     "cross-env": "^5.2.0",
     "css-loader": "^1.0.0",
     "eslint": "^4.19.1",
@@ -39,15 +40,17 @@
     "eslint-plugin-import": "^2.13.0",
     "eslint-plugin-jsx-a11y": "^6.1.1",
     "eslint-plugin-react": "^7.10.0",
-    "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^1.1.11",
     "html-webpack-plugin": "^3.2.0",
     "less": "^3.7.1",
     "less-loader": "^4.1.0",
+    "mini-css-extract-plugin": "^0.6.0",
+    "optimize-css-assets-webpack-plugin": "^5.0.1",
     "postcss-loader": "^2.1.6",
     "precss": "^3.1.2",
     "raw-loader": "^0.5.1",
     "style-loader": "^0.21.0",
+    "terser-webpack-plugin": "^1.2.3",
     "url-loader": "^1.0.1",
     "webpack": "^4.16.0",
     "webpack-cli": "^3.0.8",
