--- a/packages/template/spinacia-react-redux/package.json
+++ b/packages/template/spinacia-react-redux/package.json
@@ -27,11 +27,11 @@
     "babel-loader": "^7.1.5",
     "babel-plugin-import": "^1.8.0",
     "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-1": "^6.24.1",
     "babel-runtime": "^6.26.0",
+    "case-sensitive-paths-webpack-plugin": "^2.2.0",
     "clean-webpack-plugin": "^2.0.1",
     "cross-env": "^5.2.0",
     "css-loader": "^1.0.0",
@@ -46,7 +46,9 @@
     "less-loader": "^4.1.0",
     "mini-css-extract-plugin": "^0.6.0",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
+    "pnp-webpack-plugin": "^1.4.1",
     "postcss-loader": "^2.1.6",
+    "postcss-safe-parser": "^4.0.1",
     "precss": "^3.1.2",
     "raw-loader": "^0.5.1",
     "style-loader": "^0.21.0",
@@ -58,6 +60,7 @@
   },
   "dependencies": {
     "antd-mobile": "^2.2.2",
+    "babel-polyfill": "^6.26.0",
     "classnames": "^2.2.5",
     "es6-promise": "^4.2.4",
     "history": "^4.7.2",
