--- a/packages/template/spinacia-react-redux/package.json
+++ b/packages/template/spinacia-react-redux/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "start": "cd build && node server.js",
     "test": "cross-env BABEL_ENV=test eslint app --fix",
-    "build": "cd build && cross-env BABEL_ENV=production webpack --progress --mode production"
+    "build": "cd build && cross-env BABEL_ENV=production BUILD_ENV=dev webpack --progress --mode production",
+    "build:prod": "cd build && cross-env BABEL_ENV=production BUILD_ENV=prod webpack --progress --mode production"
   },
   "keywords": [
     "webpack",
