created eslint-config-spinacia-app and spinacia-script

--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
   "devDependencies": {},
   "scripts": {
     "start": "rm -rf ./spinacia-react-redux && spinacia-cli",
+    "start:redux": "cd packages/spinacia-script && node bin/spinacia-script.js start",
+    "build": "cd packages/spinacia-script && node bin/spinacia-script.js build",
+    "build:prod": "cd packages/spinacia-script && node bin/spinacia-script.js build:prod",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
