--- a/packages/template/spinacia-react-redux/package.json
+++ b/packages/template/spinacia-react-redux/package.json
@@ -22,6 +22,7 @@
   "license": "ISC",
   "devDependencies": {},
   "dependencies": {
+    "spinacia-script": "^1.0.3",
     "antd-mobile": "^2.2.2",
     "babel-polyfill": "^6.26.0",
     "classnames": "^2.2.5",
@@ -36,8 +37,7 @@
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "redux": "^4.0.0",
-    "redux-thunk": "^2.3.0",
-    "vconsole": "^3.2.0"
+    "redux-thunk": "^2.3.0"
   },  
   "eslintConfig": {
     "extends": "../../eslint-config-spinacia-app/index.js"
