--- a/packages/spinacia-script/package.json
+++ b/packages/spinacia-script/package.json
@@ -1,6 +1,6 @@
 {
   "name": "spinacia-script",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "description": "spinacia script",
   "bin": {
     "spinacia-script": "bin/spinacia-script.js"
@@ -16,7 +16,6 @@
   "license": "ISC",
   "devDependencies": {},
   "dependencies": {
-    "antd-mobile": "^2.2.2",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
     "babel-eslint": "^8.2.6",
@@ -29,12 +28,10 @@
     "babel-preset-stage-1": "^6.24.1",
     "babel-runtime": "^6.26.0",
     "case-sensitive-paths-webpack-plugin": "^2.2.0",
-    "classnames": "^2.2.5",
     "clean-webpack-plugin": "^2.0.1",
     "cross-env": "^5.2.0",
     "cross-spawn": "^6.0.5",
     "css-loader": "^1.0.0",
-    "es6-promise": "^4.2.4",
     "eslint": "^4.19.1",
     "eslint-config-airbnb": "^17.0.0",
     "eslint-config-spinacia-app": "^1.0.0",
@@ -43,35 +40,24 @@
     "eslint-plugin-jsx-a11y": "^6.1.1",
     "eslint-plugin-react": "^7.10.0",
     "file-loader": "^1.1.11",
-    "history": "^4.7.2",
     "html-webpack-plugin": "^3.2.0",
     "less": "^3.7.1",
     "less-loader": "^4.1.0",
     "mini-css-extract-plugin": "^0.6.0",
     "open-browser-webpack-plugin": "^0.0.5",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
-    "ost-ui": "^0.0.2",
     "pnp-webpack-plugin": "^1.4.1",
     "postcss-flexbugs-fixes": "^4.1.0",
     "postcss-loader": "^2.1.6",
     "postcss-normalize": "^7.0.1",
     "postcss-preset-env": "^6.6.0",
     "postcss-safe-parser": "^4.0.1",
-    "prop-types": "^15.6.2",
     "raw-loader": "^0.5.1",
-    "react": "^16.4.1",
-    "react-dom": "^16.4.1",
-    "react-redux": "^5.0.7",
-    "react-route": "^1.0.3",
-    "react-router": "^4.3.1",
-    "react-router-dom": "^4.3.1",
-    "redux": "^4.0.0",
-    "redux-thunk": "^2.3.0",
     "style-loader": "^0.21.0",
     "terser-webpack-plugin": "^1.2.3",
     "url-loader": "^1.0.1",
-    "vconsole": "^3.2.0",
     "webpack": "^4.16.0",
+    "webpack-assets-manifest": "^3.1.1",
     "webpack-cli": "^3.0.8",
     "webpack-dev-server": "^3.1.4"
   },
