--- a/packages/spinacia-script/package.json
+++ b/packages/spinacia-script/package.json
@@ -1,6 +1,6 @@
 {
   "name": "spinacia-script",
-  "version": "1.0.9",
+  "version": "1.0.10",
   "description": "spinacia script",
   "bin": {
     "spinacia-script": "bin/spinacia-script.js"
@@ -34,7 +34,7 @@
     "css-loader": "^1.0.0",
     "eslint": "^4.19.1",
     "eslint-config-airbnb": "^17.0.0",
-    "eslint-config-spinacia-app": "^1.0.0",
+    "eslint-config-spinacia-app": "^1.0.2",
     "eslint-friendly-formatter": "^4.0.1",
     "eslint-loader": "^2.1.2",
     "eslint-plugin-import": "^2.13.0",
@@ -66,7 +66,7 @@
   "scripts": {
     "start": "node server.js",
     "test": "cross-env BABEL_ENV=test eslint app --fix",
-    "build": "cross-env BABEL_ENV=production BUILD_ENV=dev webpack --progress --mode production --config webpack.config.js",
-    "build:prod": "cross-env BABEL_ENV=production BUILD_ENV=prod webpack --progress --mode production --config webpack.config.js"
+    "build": "cross-env BABEL_ENV=production BUILD_ENV=dev webpack --mode production --config webpack.config.js",
+    "build:prod": "cross-env BABEL_ENV=production BUILD_ENV=prod webpack --mode production --config webpack.config.js"
   }
 }
