--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "start": "rm -rf ./spinacia-react-redux && spinacia-cli",
     "start:redux": "cd packages/spinacia-script && node bin/spinacia-script.js start",
     "build": "cd packages/spinacia-script && node bin/spinacia-script.js build",
-    "build:prod": "cd packages/spinacia-script && node bin/spinacia-script.js build:prod",
+    "build:prod": "cd packages/spinacia-script && node bin/spinacia-script.js build-prod",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
