--- a/packages/spinacia-script/package.json
+++ b/packages/spinacia-script/package.json
@@ -16,6 +16,7 @@
   "license": "ISC",
   "devDependencies": {},
   "dependencies": {
+    "@babel/core": "^7.4.5",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
     "babel-eslint": "^8.2.6",
@@ -55,6 +56,7 @@
     "raw-loader": "^0.5.1",
     "style-loader": "^0.21.0",
     "terser-webpack-plugin": "^1.2.3",
+    "url": "^0.11.0",
     "url-loader": "^1.0.1",
     "webpack": "^4.16.0",
     "webpack-assets-manifest": "^3.1.1",
