--- a/packages/spinacia-script/package.json
+++ b/packages/spinacia-script/package.json
@@ -17,23 +17,30 @@
   "devDependencies": {},
   "dependencies": {
     "@babel/core": "^7.4.5",
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.3",
-    "babel-eslint": "^8.2.6",
-    "babel-loader": "^7.1.5",
-    "babel-plugin-dynamic-import-webpack": "^1.1.0",
+    "@babel/plugin-proposal-class-properties": "^7.4.4",
+    "@babel/plugin-proposal-decorators": "^7.4.4",
+    "@babel/plugin-proposal-object-rest-spread": "^7.4.4",
+    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
+    "@babel/plugin-transform-destructuring": "^7.4.4",
+    "@babel/plugin-transform-runtime": "^7.4.4",
+    "@babel/preset-env": "^7.4.5",
+    "@babel/preset-react": "^7.0.0",
+    "@babel/preset-typescript": "^7.3.3",
+    "@babel/runtime": "^7.4.5",
+    "@svgr/webpack": "^4.3.0",
+    "babel-eslint": "^10.0.1",
+    "babel-loader": "^8.0.6",
+    "babel-plugin-dynamic-import-node": "^2.2.0",
     "babel-plugin-import": "^1.8.0",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-1": "^6.24.1",
-    "babel-runtime": "^6.26.0",
+    "babel-plugin-macros": "^2.6.0",
+    "babel-plugin-named-asset-import": "^0.3.2",
+    "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
     "case-sensitive-paths-webpack-plugin": "^2.2.0",
     "clean-webpack-plugin": "^2.0.1",
     "cross-env": "^5.2.0",
     "cross-spawn": "^6.0.5",
     "css-loader": "^1.0.0",
-    "eslint": "^4.19.1",
+    "eslint": "^5.16.0",
     "eslint-config-airbnb": "^17.0.0",
     "eslint-config-spinacia-app": "^1.0.4",
     "eslint-friendly-formatter": "^4.0.1",
@@ -58,14 +65,14 @@
     "terser-webpack-plugin": "^1.2.3",
     "url": "^0.11.0",
     "url-loader": "^1.0.1",
-    "webpack": "^4.16.0",
+    "webpack": "^4.32.2",
     "webpack-assets-manifest": "^3.1.1",
     "webpack-cli": "^3.0.8",
     "webpack-dev-server": "^3.1.4",
     "webpackbar": "^3.2.0"
   },
   "scripts": {
-    "start": "node server.js",
+    "start": "cross-env BABEL_ENV=development node server.js",
     "test": "cross-env BABEL_ENV=test eslint app --fix",
     "build": "cross-env BABEL_ENV=production BUILD_ENV=dev webpack --mode production --config webpack.config.js",
     "build:prod": "cross-env BABEL_ENV=production BUILD_ENV=prod webpack --mode production --config webpack.config.js"
