--- a/packages/template/spinacia-react-redux/package.json
+++ b/packages/template/spinacia-react-redux/package.json
@@ -22,9 +22,8 @@
   "license": "ISC",
   "devDependencies": {},
   "dependencies": {
-    "spinacia-script": "^1.0.20",
+    "@babel/polyfill": "^7.4.4",
     "antd-mobile": "^2.2.2",
-    "babel-polyfill": "^6.26.0",
     "classnames": "^2.2.5",
     "es6-promise": "^4.2.4",
     "history": "^4.7.2",
@@ -37,7 +36,8 @@
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "redux": "^4.0.0",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "spinacia-script": "^1.0.20"
   },
   "eslintConfig": {
     "extends": "../../eslint-config-spinacia-app/index.js"
