--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "devDependencies": {},
   "scripts": {
     "start": "rm -rf ./spinacia-react-redux && spinacia-cli",
-    "start:redux": "cd packages/spinacia-script && node bin/spinacia-script.js start",
+    "start:redux": "cd packages/spinacia-script && NODE_ENV=development BABEL_ENV=development node bin/spinacia-script.js start",
     "build": "cd packages/spinacia-script && node bin/spinacia-script.js build",
     "build:prod": "cd packages/spinacia-script && node bin/spinacia-script.js build-prod",
     "test": "echo \"Error: no test specified\" && exit 1"
