--- a/packages/spinacia-script/package.json
+++ b/packages/spinacia-script/package.json
@@ -1,6 +1,6 @@
 {
   "name": "spinacia-script",
-  "version": "1.0.22",
+  "version": "1.0.23-beta",
   "description": "spinacia script",
   "bin": {
     "spinacia-script": "bin/spinacia-script.js"
