--- a/packages/spinacia-cli/package.json
+++ b/packages/spinacia-cli/package.json
@@ -8,8 +8,10 @@
   "dependencies": {
     "chalk": "^2.4.1",
     "commander": "^2.19.0",
+    "cross-spawn": "^6.0.5",
     "envinfo": "^7.3.1",
     "fs-extra": "^7.0.0",
+    "inquirer": "^6.3.1",
     "latest-version": "^5.1.0",
     "ora": "^3.0.0"
   },
