--- a/packages/@spinacia/create/package.json
+++ b/packages/@spinacia/create/package.json
@@ -8,7 +8,9 @@
   "dependencies": {
     "chalk": "^2.4.1",
     "commander": "^2.19.0",
+    "cross-spawn": "^7.0.1",
     "fs-extra": "^7.0.0",
+    "inquirer": "^7.0.4",
     "ora": "^3.0.0"
   },
   "scripts": {
