--- a/package.json
+++ b/package.json
@@ -40,5 +40,8 @@
   "license": "MIT",
   "eslintConfig": {
     "extends": ".eslintrc.js"
+  },
+  "dependencies": {
+    "fs-extra": "^8.1.0"
   }
 }
