--- a/packages/@spinacia/babel-preset-app/package.json
+++ b/packages/@spinacia/babel-preset-app/package.json
@@ -28,11 +28,12 @@
     "@babel/plugin-transform-runtime": "^7.5.5",
     "@babel/preset-env": "^7.5.5",
     "@babel/preset-react": "^7.0.0",
+    "@babel/preset-typescript": "^7.8.3",
     "@babel/runtime": "^7.5.5",
     "@svgr/webpack": "^4.3.2",
     "babel-plugin-dynamic-import-node": "^2.3.0",
-    "babel-plugin-istanbul": "^5.2.0",
     "babel-plugin-import": "^1.12.0",
+    "babel-plugin-istanbul": "^5.2.0",
     "babel-plugin-named-asset-import": "^0.3.3"
   }
 }
