--- a/packages/@spinacia/eslint-config-app/package.json
+++ b/packages/@spinacia/eslint-config-app/package.json
@@ -22,6 +22,8 @@
   "author": "guibwl",
   "license": "MIT",
   "dependencies": {
+    "@typescript-eslint/eslint-plugin": "^2.18.0",
+    "@typescript-eslint/parser": "^2.18.0",
     "babel-eslint": "^10.0.2",
     "eslint": "^6.1.0",
     "eslint-config-react-app": "^5.0.1",
