--- a/packages/@spinacia/utils/package.json
+++ b/packages/@spinacia/utils/package.json
@@ -25,11 +25,13 @@
     "case-sensitive-paths-webpack-plugin": "^2.2.0",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.2.0",
+    "detect-port-alt": "^1.1.6",
     "eslint": "~6.5.1",
     "eslint-friendly-formatter": "^4.0.1",
     "eslint-loader": "^2.2.1",
     "file-loader": "^4.2.0",
     "html-webpack-plugin": "^3.2.0",
+    "inquirer": "^7.0.4",
     "less": "^3.10.1",
     "less-loader": "^5.0.0",
     "mini-css-extract-plugin": "^0.8.0",
