--- a/packages/@spinacia/script/package.json
+++ b/packages/@spinacia/script/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@spinacia/script",
-  "version": "1.0.3",
+  "version": "1.0.5",
   "description": "spinacia script",
   "bin": {
     "spc-script": "bin/spinacia-script.js"
@@ -19,10 +19,9 @@
   },
   "author": "guibwl",
   "license": "MIT",
-  "devDependencies": {},
   "dependencies": {
-    "@spinacia/test": "1.0.1",
-    "@spinacia/utils": "1.0.2",
+    "@spinacia/test": "^1.0.5",
+    "@spinacia/utils": "^1.0.5",
     "chalk": "^2.4.2",
     "cross-spawn": "^6.0.5",
     "webpack": "^4.32.2",
