--- a/packages/@spinacia/utils/package.json
+++ b/packages/@spinacia/utils/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@spinacia/utils",
-  "version": "1.0.2",
+  "version": "1.0.5",
   "description": "utils for spinacia app",
   "main": "index.js",
   "scripts": {
@@ -19,8 +19,8 @@
   "license": "MIT",
   "dependencies": {
     "@babel/core": "^7.5.5",
-    "@spinacia/babel-preset-app": "1.0.0",
-    "@spinacia/eslint-config-app": "1.0.0",
+    "@spinacia/babel-preset-app": "^1.0.5",
+    "@spinacia/eslint-config-app": "^1.0.5",
     "babel-loader": "^8.0.6",
     "case-sensitive-paths-webpack-plugin": "^2.2.0",
     "clean-webpack-plugin": "^3.0.0",
