--- a/lerna.json
+++ b/lerna.json
@@ -5,7 +5,8 @@
     "publish": {
       "ignoreChanges": [
         "*.md"
-      ]
+      ],
+      "registry": "https://registry.npmjs.org "
     },
     "bootstrap": {
       "ignore": "component-*",
