--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@ Thumbs.db
 .vscode
 
 # Config
-package-lock.json
+
 records.json
 
 # Logs
@@ -15,4 +15,4 @@ npm-debug.log
 node_modules/
 
 
-test/
+/test/
