--- a/lerna.json
+++ b/lerna.json
@@ -6,6 +6,7 @@
       "ignoreChanges": [
         "*.md"
       ],
+      "message": "publish new version to npm",
       "registry": "https://registry.npmjs.org "
     },
     "bootstrap": {
@@ -17,5 +18,17 @@
   },
   "packages": [
     "packages/**"
-  ]
+  ],
+  "changelog": {
+    "repo": "guibwl/spinacia-cli",
+    "labels": {
+      "PR: New Feature": ":rocket: New Features",
+      "PR: Breaking Change": ":boom: Breaking Changes",
+      "PR: Bug Fix": ":bug: Bug Fix",
+      "PR: Documentation": ":memo: Documentation",
+      "PR: Internal": ":house: Internal",
+      "PR: Underlying Tools": ":hammer: Underlying Tools"
+    },
+    "cacheDir": ".changelog"
+  }
 }
