--- a/packages/@spinacia/eslint-config-app/package.json
+++ b/packages/@spinacia/eslint-config-app/package.json
@@ -32,8 +32,7 @@
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.14.3",
-    "eslint-plugin-react-hooks": "^2.0.1",
-    "react-dev-utils": "^9.0.3"
+    "eslint-plugin-react-hooks": "^2.0.1"
   },
   "gitHead": "4cb133a7e536ced63148451823769d01fcd589f1"
 }
