--- a/packages/@spinacia/utils/package.json
+++ b/packages/@spinacia/utils/package.json
@@ -24,6 +24,7 @@
     "babel-loader": "^8.0.6",
     "case-sensitive-paths-webpack-plugin": "^2.2.0",
     "clean-webpack-plugin": "^3.0.0",
+    "copy-webpack-plugin": "^5.1.1",
     "css-loader": "^3.2.0",
     "detect-port-alt": "^1.1.6",
     "eslint": "~6.5.1",
