--- a/packages/@spinacia/utils/package.json
+++ b/packages/@spinacia/utils/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@spinacia/utils",
-  "version": "1.0.15",
+  "version": "1.0.17",
   "description": "utils for spinacia app",
   "main": "index.js",
   "scripts": {
@@ -19,8 +19,11 @@
   "license": "MIT",
   "dependencies": {
     "@babel/core": "^7.5.5",
-    "@spinacia/babel-preset-app": "^1.0.15",
-    "@spinacia/eslint-config-app": "^1.0.15",
+    "@spinacia/babel-preset-app": "^1.0.17",
+    "@spinacia/eslint-config-app": "^1.0.17",
+    "@typescript-eslint/eslint-plugin": "^2.18.0",
+    "@typescript-eslint/parser": "^2.18.0",
+    "babel-eslint": "^10.0.2",
     "babel-loader": "^8.0.6",
     "case-sensitive-paths-webpack-plugin": "^2.2.0",
     "clean-webpack-plugin": "^3.0.0",
@@ -28,8 +31,14 @@
     "css-loader": "^3.2.0",
     "detect-port-alt": "^1.1.6",
     "eslint": "~6.5.1",
+    "eslint-config-react-app": "^5.0.1",
     "eslint-friendly-formatter": "^4.0.1",
     "eslint-loader": "^2.2.1",
+    "eslint-plugin-flowtype": "^3.6.1",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-react": "^7.14.3",
+    "eslint-plugin-react-hooks": "^2.0.1",
     "file-loader": "^4.2.0",
     "html-webpack-plugin": "^3.2.0",
     "inquirer": "^7.0.4",
@@ -54,5 +63,16 @@
     "webpack-merge": "^4.2.1",
     "webpackbar": "^4.0.0"
   },
-  "gitHead": "fd1b184787c3f80de8c86b3968b7b0138736aa0e"
+  "optionalDependencies": {
+    "fsevents": "2.1.2"
+  },
+  "peerDependencies": {
+    "typescript": "^3.2.1"
+  },
+  "peerDependenciesMeta": {
+    "typescript": {
+      "optional": true
+    }
+  },
+  "gitHead": "5b967e09d9a8c613a364bfbd1cf372b894f1ccde"
 }
